# AndhraEssence

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: AGENT.md  CLAUDE.md
.github/workflows/: e2e.yml
backend/: Dockerfile  README.md  alembic.ini  andhraessence_demo.db  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  db_types.py  main.py
backend/app/api/v1/: admin.py  auth.py  deps.py  long_orders.py  menu.py  notifications.py  orders.py  payments.py  promotions.py  restaurants.py  riders.py  router.py  users.py  vendor.py
backend/app/core/: enums.py  exceptions.py  security.py
backend/app/demo_models/: __init__.py  long_order.py  order.py  payment.py  restaurant.py  review.py  rider.py  user.py
backend/app/models/: __init__.py  long_order.py  order.py  payment.py  restaurant.py  review.py  rider.py  user.py
backend/app/schemas/: admin.py  auth.py  common.py  long_order.py  order.py  payment.py  restaurant.py  rider.py  user.py  vendor.py
backend/app/utils/: distance.py
backend/app/workers/: celery_app.py  tasks.py
backend/scripts/: demo_init_db.py  demo_seed_data.py  init_db.py  seed_data.py
backend/tests/: conftest.py  factories.py  test_admin.py  test_auth.py  test_orders.py  test_payments.py  test_restaurants.py
e2e/: README.md  package-lock.json  package.json  playwright.config.ts  test_login.yaml  test_simple.yaml  tsconfig.json
e2e/maestro/: config.yaml
e2e/maestro/demo/: full-journey-demo.yaml
e2e/maestro/edge-cases/: empty-states.yaml  error-handling.yaml
e2e/maestro/flows/: auth-flow.yaml  ordering-flow.yaml  profile-flow.yaml
e2e/maestro/helpers/: add-item-to-cart.flow.yaml  assertions.flow.yaml  (+4 more)
e2e/tests/: auth.spec.ts  cart.spec.ts  checkout.spec.ts  e2e-full-flow.spec.ts  helpers.ts  home.spec.ts  orders.spec.ts  screenshots.spec.ts  search.spec.ts
mobile/: .gitignore  README.md  app.json  babel.config.js  package-lock.json  package.json
mobile/app/: _layout.tsx  checkout.tsx  index.tsx
mobile/context/: AuthContext.tsx
mobile/hooks/: useAnimatedPressable.tsx  useReducedMotion.ts  useStaggeredAnimation.ts
mobile/ios/: Podfile
mobile/store/: index.ts
mobile/theme/: index.ts
mobile/types/: api.ts  navigation.ts
mobile/utils/: constants.ts  formatters.ts  roleRedirect.ts
nginx/: nginx.conf
scripts/: init.sql
(+95 files in other folders)
