[tool.poetry]
name = "andhra-essence-api"
version = "1.0.0"
description = "Food Delivery Backend API - AndhraEssence"
authors = ["AndhraEssence Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# Web Framework
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.9"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
aiosqlite = "^0.19.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"

# Authentication
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# Validation
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
email-validator = "^2.1.0"

# Caching
redis = {extras = ["hiredis"], version = "^5.0.1"}

# Background Tasks
celery = "^5.3.6"
flower = "^2.0.1"

# External Services
razorpay = "^1.3.2"
twilio = "^8.10.0"
firebase-admin = "^6.4.0"

# Utilities
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
httpx = "^0.27.0"
aiofiles = "^23.2.1"

# Rate Limiting
slowapi = "^0.1.9"

# Geolocation
geopy = "^2.4.1"
haversine = "^2.8.1"

# PDF Generation
weasyprint = "^60.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"
pytest-cov = "^4.1.0"
httpx = "^0.27.0"
factory-boy = "^3.3.0"
faker = "^22.6.0"
black = "^24.2.0"
ruff = "^0.2.2"
mypy = "^1.8.0"

[tool.poetry.group.db.dependencies]
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
